# flair_baseline

./: .gitignore  README.md  flair_elf_config.yaml  flow.md  pyproject.toml  run_resume_mimic.sh  run_train_all_mimic.sh  vocab.json
config/: clif_config.template.json
src/flair_baseline/: __init__.py  cli.py  config.py  featurize.py  layout.py  train.py
tests/: test_featurize.py  test_shared_meds.py
wheels/: flair_benchmark-0.0.1-py3-none-any.whl
