[project]
name = "flair-baseline"
version = "0.1.0"
description = "XGBoost count-feature baseline for FLAIR ICU benchmark tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flair-benchmark",
    "xgboost>=2.0",
    "polars>=0.20",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "typer>=0.12",
    "pyyaml>=6.0",
    "clifpy>=0.4.9",
]

[project.scripts]
flair-baseline = "flair_baseline.cli:main"

[tool.uv.sources]
flair-benchmark = { path = "..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flair_baseline"]
