[project]
name = "flair-baseline"
version = "0.1.0"
description = "XGBoost count-feature baseline for FLAIR ICU benchmark tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flair-benchmark",
    "xgboost>=2.0",
    "optuna>=3.0",
    "tqdm>=4",
    "polars>=0.20",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "typer>=0.12",
    "pyyaml>=6.0",
    "clifpy>=0.4.9",
]

[project.scripts]
flair-baseline = "flair_baseline.cli:main"

# flair lib is shipped as a prebuilt wheel under wheels/ so the baseline is
# self-contained (no clone/symlink) for train + inference sites. Interim until
# flair-benchmark is on PyPI — then delete this [tool.uv.sources] block. Rebuild:
#   uv build --wheel --out-dir flair_baseline/wheels   (run from the flair repo)
[tool.uv.sources]
flair-benchmark = { path = "wheels/flair_benchmark-0.0.1-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flair_baseline"]
